--- a/src/mongo/db/modules/enterprise/src/magic_restore/SConscript
+++ b/src/mongo/db/modules/enterprise/src/magic_restore/SConscript
@@ -44,6 +44,7 @@ env.CppUnitTest(
         "$BUILD_DIR/mongo/db/repl/replmocks",
         "$BUILD_DIR/mongo/db/repl/storage_interface_impl",
         "$BUILD_DIR/mongo/db/s/sharding_catalog_manager",
+        "$BUILD_DIR/mongo/db/service_context_d",
         "$BUILD_DIR/mongo/db/service_context_d_test_fixture",
         "$BUILD_DIR/mongo/db/shard_role",
         "$BUILD_DIR/mongo/db/storage/storage_options",
