SERVER-83683: control concurrent in progress checkpoints (#26779)

--- a/src/mongo/db/modules/enterprise/src/streams/exec/SConscript
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/SConscript
@@ -41,6 +41,7 @@ env.Library(
         "checkpoint/restorer.cpp",
         "checkpoint_coordinator.cpp",
         "collect_operator.cpp",
+        "concurrent_checkpoint_monitor.cpp",
         "context.cpp",
         "connection_status.cpp",
         "dead_letter_queue.cpp",
